--- a/Ayomide's Web Design Cheat Sheet/styles.css
+++ b/Ayomide's Web Design Cheat Sheet/styles.css
@@ -47,11 +47,11 @@ tr{
   background-color: azure;
 }
 
-table:hover {
+table:hover { 
   box-shadow: 10px 10px 20px 20px rgba(108, 210, 215, 0.7);
 }
 
-header:hover{
+header:hover{ /*Added in Box Shadow*/
   box-shadow: 10px 5px 15px 5px rgba(195, 8, 8, 0.462)
 }
 
